parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    APOST
    DOWNTO
    FUNCTION

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID PONTO_VIRGULA resto
Rule 2     resto -> vars BEGIN codigo END PONTO
Rule 3     vars -> VAR var_list
Rule 4     vars -> empty
Rule 5     var_list -> var
Rule 6     var_list -> var_list var
Rule 7     var -> id_list DOIS_PONTOS tipo PONTO_VIRGULA
Rule 8     id_list -> ID
Rule 9     id_list -> id_list VIRGULA ID
Rule 10    tipo -> INTEGER
Rule 11    tipo -> STRING
Rule 12    tipo -> BOOLEAN
Rule 13    tipo -> ARRAY LBRACKET NUM_INT DOTDOT NUM_INT RBRACKET OF tipo
Rule 14    codigo -> comando_lista
Rule 15    codigo -> codigo PONTO_VIRGULA comando_lista
Rule 16    comando_lista -> comando_assign
Rule 17    comando_lista -> comando_assign_array
Rule 18    comando_lista -> comando_while
Rule 19    comando_lista -> comando_for
Rule 20    comando_lista -> comando_if
Rule 21    comando_lista -> comando_writeln
Rule 22    comando_lista -> comando_readln
Rule 23    comando_lista -> comando_begin
Rule 24    comando_lista -> empty
Rule 25    comando_assign -> ID ASSIGN expressao
Rule 26    comando_assign_array -> ID LBRACKET expressao RBRACKET ASSIGN expressao
Rule 27    comando_while -> WHILE expressao DO comando_lista
Rule 28    comando_for -> FOR ID ASSIGN expressao TO expressao DO comando_lista
Rule 29    comando_if -> IF expressao THEN comando_lista
Rule 30    comando_if -> IF expressao THEN comando_lista ELSE comando_lista
Rule 31    comando_writeln -> WRITELN PARENT_A argumentos PARENT_F
Rule 32    comando_readln -> READLN PARENT_A variavel PARENT_F
Rule 33    comando_begin -> BEGIN codigo END
Rule 34    variavel -> ID
Rule 35    variavel -> ID LBRACKET expressao RBRACKET
Rule 36    expressao -> termo
Rule 37    expressao -> expressao PLUS termo
Rule 38    expressao -> expressao MINUS termo
Rule 39    expressao -> expressao TIMES termo
Rule 40    expressao -> expressao DIVIDE termo
Rule 41    expressao -> expressao DIV termo
Rule 42    expressao -> expressao MOD termo
Rule 43    expressao -> expressao AND expressao
Rule 44    expressao -> expressao OR expressao
Rule 45    expressao -> expressao EQUAL expressao
Rule 46    expressao -> expressao MENOR_IGUAL expressao
Rule 47    expressao -> expressao MAIOR_IGUAL expressao
Rule 48    expressao -> expressao MENOR expressao
Rule 49    expressao -> expressao MAIOR expressao
Rule 50    termo -> NUM_INT
Rule 51    termo -> NUM_REAL
Rule 52    termo -> ID
Rule 53    termo -> LIT_STRING
Rule 54    termo -> TRUE
Rule 55    termo -> FALSE
Rule 56    termo -> PARENT_A expressao PARENT_F
Rule 57    termo -> termo_array_access
Rule 58    termo_array_access -> ID LBRACKET expressao RBRACKET
Rule 59    argumentos -> expressao
Rule 60    argumentos -> argumentos VIRGULA expressao
Rule 61    empty -> <empty>

Terminals, with rules where they appear

AND                  : 43
APOST                : 
ARRAY                : 13
ASSIGN               : 25 26 28
BEGIN                : 2 33
BOOLEAN              : 12
DIV                  : 41
DIVIDE               : 40
DO                   : 27 28
DOIS_PONTOS          : 7
DOTDOT               : 13
DOWNTO               : 
ELSE                 : 30
END                  : 2 33
EQUAL                : 45
FALSE                : 55
FOR                  : 28
FUNCTION             : 
ID                   : 1 8 9 25 26 28 34 35 52 58
IF                   : 29 30
INTEGER              : 10
LBRACKET             : 13 26 35 58
LIT_STRING           : 53
MAIOR                : 49
MAIOR_IGUAL          : 47
MENOR                : 48
MENOR_IGUAL          : 46
MINUS                : 38
MOD                  : 42
NUM_INT              : 13 13 50
NUM_REAL             : 51
OF                   : 13
OR                   : 44
PARENT_A             : 31 32 56
PARENT_F             : 31 32 56
PLUS                 : 37
PONTO                : 2
PONTO_VIRGULA        : 1 7 15
PROGRAM              : 1
RBRACKET             : 13 26 35 58
READLN               : 32
STRING               : 11
THEN                 : 29 30
TIMES                : 39
TO                   : 28
TRUE                 : 54
VAR                  : 3
VIRGULA              : 9 60
WHILE                : 27
WRITELN              : 31
error                : 

Nonterminals, with rules where they appear

argumentos           : 31 60
codigo               : 2 15 33
comando_assign       : 16
comando_assign_array : 17
comando_begin        : 23
comando_for          : 19
comando_if           : 20
comando_lista        : 14 15 27 28 29 30 30
comando_readln       : 22
comando_while        : 18
comando_writeln      : 21
empty                : 4 24
expressao            : 25 26 26 27 28 28 29 30 35 37 38 39 40 41 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 56 58 59 60
id_list              : 7 9
program              : 0
resto                : 1
termo                : 36 37 38 39 40 41 42
termo_array_access   : 57
tipo                 : 7 13
var                  : 5 6
var_list             : 3 6
variavel             : 32
vars                 : 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID PONTO_VIRGULA resto

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID PONTO_VIRGULA resto

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . PONTO_VIRGULA resto

    PONTO_VIRGULA   shift and go to state 4


state 4

    (1) program -> PROGRAM ID PONTO_VIRGULA . resto
    (2) resto -> . vars BEGIN codigo END PONTO
    (3) vars -> . VAR var_list
    (4) vars -> . empty
    (61) empty -> .

    VAR             shift and go to state 7
    BEGIN           reduce using rule 61 (empty -> .)

    resto                          shift and go to state 5
    vars                           shift and go to state 6
    empty                          shift and go to state 8

state 5

    (1) program -> PROGRAM ID PONTO_VIRGULA resto .

    $end            reduce using rule 1 (program -> PROGRAM ID PONTO_VIRGULA resto .)


state 6

    (2) resto -> vars . BEGIN codigo END PONTO

    BEGIN           shift and go to state 9


state 7

    (3) vars -> VAR . var_list
    (5) var_list -> . var
    (6) var_list -> . var_list var
    (7) var -> . id_list DOIS_PONTOS tipo PONTO_VIRGULA
    (8) id_list -> . ID
    (9) id_list -> . id_list VIRGULA ID

    ID              shift and go to state 13

    var_list                       shift and go to state 10
    var                            shift and go to state 11
    id_list                        shift and go to state 12

state 8

    (4) vars -> empty .

    BEGIN           reduce using rule 4 (vars -> empty .)


state 9

    (2) resto -> vars BEGIN . codigo END PONTO
    (14) codigo -> . comando_lista
    (15) codigo -> . codigo PONTO_VIRGULA comando_lista
    (16) comando_lista -> . comando_assign
    (17) comando_lista -> . comando_assign_array
    (18) comando_lista -> . comando_while
    (19) comando_lista -> . comando_for
    (20) comando_lista -> . comando_if
    (21) comando_lista -> . comando_writeln
    (22) comando_lista -> . comando_readln
    (23) comando_lista -> . comando_begin
    (24) comando_lista -> . empty
    (25) comando_assign -> . ID ASSIGN expressao
    (26) comando_assign_array -> . ID LBRACKET expressao RBRACKET ASSIGN expressao
    (27) comando_while -> . WHILE expressao DO comando_lista
    (28) comando_for -> . FOR ID ASSIGN expressao TO expressao DO comando_lista
    (29) comando_if -> . IF expressao THEN comando_lista
    (30) comando_if -> . IF expressao THEN comando_lista ELSE comando_lista
    (31) comando_writeln -> . WRITELN PARENT_A argumentos PARENT_F
    (32) comando_readln -> . READLN PARENT_A variavel PARENT_F
    (33) comando_begin -> . BEGIN codigo END
    (61) empty -> .

    ID              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    IF              shift and go to state 29
    WRITELN         shift and go to state 30
    READLN          shift and go to state 31
    BEGIN           shift and go to state 14
    END             reduce using rule 61 (empty -> .)
    PONTO_VIRGULA   reduce using rule 61 (empty -> .)

    codigo                         shift and go to state 15
    comando_lista                  shift and go to state 16
    comando_assign                 shift and go to state 17
    comando_assign_array           shift and go to state 18
    comando_while                  shift and go to state 19
    comando_for                    shift and go to state 20
    comando_if                     shift and go to state 21
    comando_writeln                shift and go to state 22
    comando_readln                 shift and go to state 23
    comando_begin                  shift and go to state 24
    empty                          shift and go to state 25

state 10

    (3) vars -> VAR var_list .
    (6) var_list -> var_list . var
    (7) var -> . id_list DOIS_PONTOS tipo PONTO_VIRGULA
    (8) id_list -> . ID
    (9) id_list -> . id_list VIRGULA ID

    BEGIN           reduce using rule 3 (vars -> VAR var_list .)
    ID              shift and go to state 13

    var                            shift and go to state 32
    id_list                        shift and go to state 12

state 11

    (5) var_list -> var .

    ID              reduce using rule 5 (var_list -> var .)
    BEGIN           reduce using rule 5 (var_list -> var .)


state 12

    (7) var -> id_list . DOIS_PONTOS tipo PONTO_VIRGULA
    (9) id_list -> id_list . VIRGULA ID

    DOIS_PONTOS     shift and go to state 33
    VIRGULA         shift and go to state 34


state 13

    (8) id_list -> ID .

    DOIS_PONTOS     reduce using rule 8 (id_list -> ID .)
    VIRGULA         reduce using rule 8 (id_list -> ID .)


state 14

    (33) comando_begin -> BEGIN . codigo END
    (14) codigo -> . comando_lista
    (15) codigo -> . codigo PONTO_VIRGULA comando_lista
    (16) comando_lista -> . comando_assign
    (17) comando_lista -> . comando_assign_array
    (18) comando_lista -> . comando_while
    (19) comando_lista -> . comando_for
    (20) comando_lista -> . comando_if
    (21) comando_lista -> . comando_writeln
    (22) comando_lista -> . comando_readln
    (23) comando_lista -> . comando_begin
    (24) comando_lista -> . empty
    (25) comando_assign -> . ID ASSIGN expressao
    (26) comando_assign_array -> . ID LBRACKET expressao RBRACKET ASSIGN expressao
    (27) comando_while -> . WHILE expressao DO comando_lista
    (28) comando_for -> . FOR ID ASSIGN expressao TO expressao DO comando_lista
    (29) comando_if -> . IF expressao THEN comando_lista
    (30) comando_if -> . IF expressao THEN comando_lista ELSE comando_lista
    (31) comando_writeln -> . WRITELN PARENT_A argumentos PARENT_F
    (32) comando_readln -> . READLN PARENT_A variavel PARENT_F
    (33) comando_begin -> . BEGIN codigo END
    (61) empty -> .

    ID              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    IF              shift and go to state 29
    WRITELN         shift and go to state 30
    READLN          shift and go to state 31
    BEGIN           shift and go to state 14
    END             reduce using rule 61 (empty -> .)
    PONTO_VIRGULA   reduce using rule 61 (empty -> .)

    codigo                         shift and go to state 35
    comando_lista                  shift and go to state 16
    comando_assign                 shift and go to state 17
    comando_assign_array           shift and go to state 18
    comando_while                  shift and go to state 19
    comando_for                    shift and go to state 20
    comando_if                     shift and go to state 21
    comando_writeln                shift and go to state 22
    comando_readln                 shift and go to state 23
    comando_begin                  shift and go to state 24
    empty                          shift and go to state 25

state 15

    (2) resto -> vars BEGIN codigo . END PONTO
    (15) codigo -> codigo . PONTO_VIRGULA comando_lista

    END             shift and go to state 36
    PONTO_VIRGULA   shift and go to state 37


state 16

    (14) codigo -> comando_lista .

    END             reduce using rule 14 (codigo -> comando_lista .)
    PONTO_VIRGULA   reduce using rule 14 (codigo -> comando_lista .)


state 17

    (16) comando_lista -> comando_assign .

    END             reduce using rule 16 (comando_lista -> comando_assign .)
    PONTO_VIRGULA   reduce using rule 16 (comando_lista -> comando_assign .)
    ELSE            reduce using rule 16 (comando_lista -> comando_assign .)


state 18

    (17) comando_lista -> comando_assign_array .

    END             reduce using rule 17 (comando_lista -> comando_assign_array .)
    PONTO_VIRGULA   reduce using rule 17 (comando_lista -> comando_assign_array .)
    ELSE            reduce using rule 17 (comando_lista -> comando_assign_array .)


state 19

    (18) comando_lista -> comando_while .

    END             reduce using rule 18 (comando_lista -> comando_while .)
    PONTO_VIRGULA   reduce using rule 18 (comando_lista -> comando_while .)
    ELSE            reduce using rule 18 (comando_lista -> comando_while .)


state 20

    (19) comando_lista -> comando_for .

    END             reduce using rule 19 (comando_lista -> comando_for .)
    PONTO_VIRGULA   reduce using rule 19 (comando_lista -> comando_for .)
    ELSE            reduce using rule 19 (comando_lista -> comando_for .)


state 21

    (20) comando_lista -> comando_if .

    END             reduce using rule 20 (comando_lista -> comando_if .)
    PONTO_VIRGULA   reduce using rule 20 (comando_lista -> comando_if .)
    ELSE            reduce using rule 20 (comando_lista -> comando_if .)


state 22

    (21) comando_lista -> comando_writeln .

    END             reduce using rule 21 (comando_lista -> comando_writeln .)
    PONTO_VIRGULA   reduce using rule 21 (comando_lista -> comando_writeln .)
    ELSE            reduce using rule 21 (comando_lista -> comando_writeln .)


state 23

    (22) comando_lista -> comando_readln .

    END             reduce using rule 22 (comando_lista -> comando_readln .)
    PONTO_VIRGULA   reduce using rule 22 (comando_lista -> comando_readln .)
    ELSE            reduce using rule 22 (comando_lista -> comando_readln .)


state 24

    (23) comando_lista -> comando_begin .

    END             reduce using rule 23 (comando_lista -> comando_begin .)
    PONTO_VIRGULA   reduce using rule 23 (comando_lista -> comando_begin .)
    ELSE            reduce using rule 23 (comando_lista -> comando_begin .)


state 25

    (24) comando_lista -> empty .

    END             reduce using rule 24 (comando_lista -> empty .)
    PONTO_VIRGULA   reduce using rule 24 (comando_lista -> empty .)
    ELSE            reduce using rule 24 (comando_lista -> empty .)


state 26

    (25) comando_assign -> ID . ASSIGN expressao
    (26) comando_assign_array -> ID . LBRACKET expressao RBRACKET ASSIGN expressao

    ASSIGN          shift and go to state 38
    LBRACKET        shift and go to state 39


state 27

    (27) comando_while -> WHILE . expressao DO comando_lista
    (36) expressao -> . termo
    (37) expressao -> . expressao PLUS termo
    (38) expressao -> . expressao MINUS termo
    (39) expressao -> . expressao TIMES termo
    (40) expressao -> . expressao DIVIDE termo
    (41) expressao -> . expressao DIV termo
    (42) expressao -> . expressao MOD termo
    (43) expressao -> . expressao AND expressao
    (44) expressao -> . expressao OR expressao
    (45) expressao -> . expressao EQUAL expressao
    (46) expressao -> . expressao MENOR_IGUAL expressao
    (47) expressao -> . expressao MAIOR_IGUAL expressao
    (48) expressao -> . expressao MENOR expressao
    (49) expressao -> . expressao MAIOR expressao
    (50) termo -> . NUM_INT
    (51) termo -> . NUM_REAL
    (52) termo -> . ID
    (53) termo -> . LIT_STRING
    (54) termo -> . TRUE
    (55) termo -> . FALSE
    (56) termo -> . PARENT_A expressao PARENT_F
    (57) termo -> . termo_array_access
    (58) termo_array_access -> . ID LBRACKET expressao RBRACKET

    NUM_INT         shift and go to state 42
    NUM_REAL        shift and go to state 43
    ID              shift and go to state 44
    LIT_STRING      shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47
    PARENT_A        shift and go to state 48

    expressao                      shift and go to state 40
    termo                          shift and go to state 41
    termo_array_access             shift and go to state 49

state 28

    (28) comando_for -> FOR . ID ASSIGN expressao TO expressao DO comando_lista

    ID              shift and go to state 50


state 29

    (29) comando_if -> IF . expressao THEN comando_lista
    (30) comando_if -> IF . expressao THEN comando_lista ELSE comando_lista
    (36) expressao -> . termo
    (37) expressao -> . expressao PLUS termo
    (38) expressao -> . expressao MINUS termo
    (39) expressao -> . expressao TIMES termo
    (40) expressao -> . expressao DIVIDE termo
    (41) expressao -> . expressao DIV termo
    (42) expressao -> . expressao MOD termo
    (43) expressao -> . expressao AND expressao
    (44) expressao -> . expressao OR expressao
    (45) expressao -> . expressao EQUAL expressao
    (46) expressao -> . expressao MENOR_IGUAL expressao
    (47) expressao -> . expressao MAIOR_IGUAL expressao
    (48) expressao -> . expressao MENOR expressao
    (49) expressao -> . expressao MAIOR expressao
    (50) termo -> . NUM_INT
    (51) termo -> . NUM_REAL
    (52) termo -> . ID
    (53) termo -> . LIT_STRING
    (54) termo -> . TRUE
    (55) termo -> . FALSE
    (56) termo -> . PARENT_A expressao PARENT_F
    (57) termo -> . termo_array_access
    (58) termo_array_access -> . ID LBRACKET expressao RBRACKET

    NUM_INT         shift and go to state 42
    NUM_REAL        shift and go to state 43
    ID              shift and go to state 44
    LIT_STRING      shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47
    PARENT_A        shift and go to state 48

    expressao                      shift and go to state 51
    termo                          shift and go to state 41
    termo_array_access             shift and go to state 49

state 30

    (31) comando_writeln -> WRITELN . PARENT_A argumentos PARENT_F

    PARENT_A        shift and go to state 52


state 31

    (32) comando_readln -> READLN . PARENT_A variavel PARENT_F

    PARENT_A        shift and go to state 53


state 32

    (6) var_list -> var_list var .

    ID              reduce using rule 6 (var_list -> var_list var .)
    BEGIN           reduce using rule 6 (var_list -> var_list var .)


state 33

    (7) var -> id_list DOIS_PONTOS . tipo PONTO_VIRGULA
    (10) tipo -> . INTEGER
    (11) tipo -> . STRING
    (12) tipo -> . BOOLEAN
    (13) tipo -> . ARRAY LBRACKET NUM_INT DOTDOT NUM_INT RBRACKET OF tipo

    INTEGER         shift and go to state 55
    STRING          shift and go to state 56
    BOOLEAN         shift and go to state 57
    ARRAY           shift and go to state 58

    tipo                           shift and go to state 54

state 34

    (9) id_list -> id_list VIRGULA . ID

    ID              shift and go to state 59


state 35

    (33) comando_begin -> BEGIN codigo . END
    (15) codigo -> codigo . PONTO_VIRGULA comando_lista

    END             shift and go to state 60
    PONTO_VIRGULA   shift and go to state 37


state 36

    (2) resto -> vars BEGIN codigo END . PONTO

    PONTO           shift and go to state 61


state 37

    (15) codigo -> codigo PONTO_VIRGULA . comando_lista
    (16) comando_lista -> . comando_assign
    (17) comando_lista -> . comando_assign_array
    (18) comando_lista -> . comando_while
    (19) comando_lista -> . comando_for
    (20) comando_lista -> . comando_if
    (21) comando_lista -> . comando_writeln
    (22) comando_lista -> . comando_readln
    (23) comando_lista -> . comando_begin
    (24) comando_lista -> . empty
    (25) comando_assign -> . ID ASSIGN expressao
    (26) comando_assign_array -> . ID LBRACKET expressao RBRACKET ASSIGN expressao
    (27) comando_while -> . WHILE expressao DO comando_lista
    (28) comando_for -> . FOR ID ASSIGN expressao TO expressao DO comando_lista
    (29) comando_if -> . IF expressao THEN comando_lista
    (30) comando_if -> . IF expressao THEN comando_lista ELSE comando_lista
    (31) comando_writeln -> . WRITELN PARENT_A argumentos PARENT_F
    (32) comando_readln -> . READLN PARENT_A variavel PARENT_F
    (33) comando_begin -> . BEGIN codigo END
    (61) empty -> .

    ID              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    IF              shift and go to state 29
    WRITELN         shift and go to state 30
    READLN          shift and go to state 31
    BEGIN           shift and go to state 14
    END             reduce using rule 61 (empty -> .)
    PONTO_VIRGULA   reduce using rule 61 (empty -> .)

    comando_lista                  shift and go to state 62
    comando_assign                 shift and go to state 17
    comando_assign_array           shift and go to state 18
    comando_while                  shift and go to state 19
    comando_for                    shift and go to state 20
    comando_if                     shift and go to state 21
    comando_writeln                shift and go to state 22
    comando_readln                 shift and go to state 23
    comando_begin                  shift and go to state 24
    empty                          shift and go to state 25

state 38

    (25) comando_assign -> ID ASSIGN . expressao
    (36) expressao -> . termo
    (37) expressao -> . expressao PLUS termo
    (38) expressao -> . expressao MINUS termo
    (39) expressao -> . expressao TIMES termo
    (40) expressao -> . expressao DIVIDE termo
    (41) expressao -> . expressao DIV termo
    (42) expressao -> . expressao MOD termo
    (43) expressao -> . expressao AND expressao
    (44) expressao -> . expressao OR expressao
    (45) expressao -> . expressao EQUAL expressao
    (46) expressao -> . expressao MENOR_IGUAL expressao
    (47) expressao -> . expressao MAIOR_IGUAL expressao
    (48) expressao -> . expressao MENOR expressao
    (49) expressao -> . expressao MAIOR expressao
    (50) termo -> . NUM_INT
    (51) termo -> . NUM_REAL
    (52) termo -> . ID
    (53) termo -> . LIT_STRING
    (54) termo -> . TRUE
    (55) termo -> . FALSE
    (56) termo -> . PARENT_A expressao PARENT_F
    (57) termo -> . termo_array_access
    (58) termo_array_access -> . ID LBRACKET expressao RBRACKET

    NUM_INT         shift and go to state 42
    NUM_REAL        shift and go to state 43
    ID              shift and go to state 44
    LIT_STRING      shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47
    PARENT_A        shift and go to state 48

    expressao                      shift and go to state 63
    termo                          shift and go to state 41
    termo_array_access             shift and go to state 49

state 39

    (26) comando_assign_array -> ID LBRACKET . expressao RBRACKET ASSIGN expressao
    (36) expressao -> . termo
    (37) expressao -> . expressao PLUS termo
    (38) expressao -> . expressao MINUS termo
    (39) expressao -> . expressao TIMES termo
    (40) expressao -> . expressao DIVIDE termo
    (41) expressao -> . expressao DIV termo
    (42) expressao -> . expressao MOD termo
    (43) expressao -> . expressao AND expressao
    (44) expressao -> . expressao OR expressao
    (45) expressao -> . expressao EQUAL expressao
    (46) expressao -> . expressao MENOR_IGUAL expressao
    (47) expressao -> . expressao MAIOR_IGUAL expressao
    (48) expressao -> . expressao MENOR expressao
    (49) expressao -> . expressao MAIOR expressao
    (50) termo -> . NUM_INT
    (51) termo -> . NUM_REAL
    (52) termo -> . ID
    (53) termo -> . LIT_STRING
    (54) termo -> . TRUE
    (55) termo -> . FALSE
    (56) termo -> . PARENT_A expressao PARENT_F
    (57) termo -> . termo_array_access
    (58) termo_array_access -> . ID LBRACKET expressao RBRACKET

    NUM_INT         shift and go to state 42
    NUM_REAL        shift and go to state 43
    ID              shift and go to state 44
    LIT_STRING      shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47
    PARENT_A        shift and go to state 48

    expressao                      shift and go to state 64
    termo                          shift and go to state 41
    termo_array_access             shift and go to state 49

state 40

    (27) comando_while -> WHILE expressao . DO comando_lista
    (37) expressao -> expressao . PLUS termo
    (38) expressao -> expressao . MINUS termo
    (39) expressao -> expressao . TIMES termo
    (40) expressao -> expressao . DIVIDE termo
    (41) expressao -> expressao . DIV termo
    (42) expressao -> expressao . MOD termo
    (43) expressao -> expressao . AND expressao
    (44) expressao -> expressao . OR expressao
    (45) expressao -> expressao . EQUAL expressao
    (46) expressao -> expressao . MENOR_IGUAL expressao
    (47) expressao -> expressao . MAIOR_IGUAL expressao
    (48) expressao -> expressao . MENOR expressao
    (49) expressao -> expressao . MAIOR expressao

    DO              shift and go to state 65
    PLUS            shift and go to state 66
    MINUS           shift and go to state 67
    TIMES           shift and go to state 68
    DIVIDE          shift and go to state 69
    DIV             shift and go to state 70
    MOD             shift and go to state 71
    AND             shift and go to state 72
    OR              shift and go to state 73
    EQUAL           shift and go to state 74
    MENOR_IGUAL     shift and go to state 75
    MAIOR_IGUAL     shift and go to state 76
    MENOR           shift and go to state 77
    MAIOR           shift and go to state 78


state 41

    (36) expressao -> termo .
